--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 								</g>
 							</svg>
 						</div>
-						<h5><a class="magic-hover magic-hover__square" href="services-details.html">Graphichs Design</a>
+						<h5><a class="magic-hover magic-hover__square" href="services-details.html">Graphich Design</a>
 						</h5>
 					</div>
 				</div>
